todo productType
